Fix T73045 Crash entering edit mode for "Object Font" instance mesh

Font duplicator was not outputing dupli-objects using evaluated object
pointers, leading to crash because original object are not supposed to
be drawable.